syntax = "proto3";

package proto;

message UserLocation {
  int32 userId = 1;
  double lat = 2;
  double long = 3;
}

message UserFence {
  int32 userId = 1;
  string placeName = 2;
  int32 fenceId = 3;
}